--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <button onclick="location.href='page1'">Go to Page 1</button>
-    <button onclick="location.href='page2'">Go to Page 2</button>
+    <button onclick="location.href='page1/'">Go to Page 1</button>
+<button onclick="location.href='page2/'">Go to Page 2</button>
 </body>
 </html>
