--- a/page2/index.html
+++ b/page2/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>This is Page 2</h1>
-    <a href="index.html">Back to Home</a>
+    <a href="/">Back to Home</a>
 </body>
 </html>
